@@ -4,6 +4,7 @@ procps-ng-NEXT
     internal: days/users when value is 0                   issue #303
     internal: dont print 60s but increment minute          issue #302
     internal: stat api fixed remaining cpu distortions     issue #321
+    internal: only count user sessions
     external: zswap & zswapped added to meminfo api
     external: schedule class added to pids api
     external: disk sleep added to pids api, sleep revised  issue #265
